# ResTIC18_PythonBasico

./: .gitignore  README.md
Exemplos/: DataFruta.py  README.md  sorteio.py
Exemplos/DataFruta_V1/: requirements.txt
Exemplos/FakerExample/: exemplo_01.ipynb
Exemplos/Lista_De_Compras/: lista_V1.py  lista_V1_1.py  lista_V2.py  lista_V3.py
Exemplos/Matplotlib/: exemAula25.py  fig_03.py
Exemplos/ObjetosGeometricos/: main.py  objetosGeometricos.py
Exemplos/exemPoetry/: requirements.txt
Exemplos/exemPoetry/climatempo/: pyproject.toml
Exemplos/minhacasa/: pyproject.toml
Exemplos/modulos/: main.py  meuModulo.py  moduloMat.py
Exemplos/testes/: fibo.py  test_meuPrimeiroTeste.py
Exemplos/tkinter/: exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  exemplo_05.py  exemplo_06.py  exemplo_06_1.py  exemplo_06_2.py  exemplo_07.py  exemplo_08.py  exemplo_09.py  exemplo_10.py  exemplo_11.py  exemplo_12.py
Figuras/: README.md
Notebooks/: AA-01.ipynb  AA-02.ipynb  AA-03.ipynb  Aula-01.ipynb  Aula-02.ipynb  Aula-03.ipynb  Aula-04.ipynb  Aula-05.ipynb  Aula-06.ipynb  Aula-07.ipynb  Aula-08.ipynb  Aula-09.ipynb  Aula-10_11.ipynb  Aula-12.ipynb  Aula-13.ipynb  Aula-14.ipynb  Aula-15.ipynb  Aula-16_17.ipynb  Aula-18.ipynb  Aula-19.ipynb  Aula-20.ipynb  Aula-21.ipynb  Aula-22_23.ipynb  Aula-24.ipynb  Aula-25.ipynb  Aula-26.ipynb  Aula-27.ipynb  Aula-29.ipynb  Aula-30.ipynb  Aula-31.ipynb  Aula-32.ipynb  Aula_VDados.ipynb  IP-P001.ipynb  IP-P002.ipynb  IP-P004.ipynb  IP-P005.ipynb  IP-P006.ipynb  IP-P007.ipynb  IP-P008.ipynb  IP-P009.ipynb  (+9 more)
(+28 files in other folders)
